--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ document.getElementById('loginForm').addEventListener('submit', function(event) 
   };
 
   // Send the POST request using fetch
-  fetch('http://127.0.0.1:8000/api/v1/accounts/log-in/', {
+  fetch('https://coloby.onrender.com/api/v1/accounts/log-in/', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json'
