--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ document.getElementById('loginForm').addEventListener('submit', function(event) 
   event.preventDefault(); // Prevent the form from submitting the default way
   
   // Get the form data
-  const email = document.getElementById('email').value;
+  const username = document.getElementById('username').value;
   const password = document.getElementById('password').value;
   
   // Create the request payload
   const payload = {
-    email: email,
+    username: username,
     password: password
   };
 
