--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ button:hover {
   <div class="login-container">
     <form id="loginForm">
       <label for="username">Username:</label>
-      <input type="text" id="email" name="username" required>
+      <input type="text" id="username" name="username" required>
       <br>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
