--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <style>
-    /* styles.css */
+
 
 body {
   font-family: Arial, sans-serif;
@@ -88,7 +88,7 @@ document.getElementById('loginForm').addEventListener('submit', function(event) 
   };
 
   // Send the POST request using fetch
-  fetch('https://recado.pythonanywhere.com/api/v1/accounts/login/', {
+  fetch('', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json'
