--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <script>
         // API Base URL
-        const API_BASE_URL = "https://illusion-6ga5.onrender.com/api/";  // Replace with your actual API URL
+        const API_BASE_URL = "https://illusion-6ga5.onrender.com/api";  // Replace with your actual API URL
 
         // Register Form Submission
         document.getElementById('registerForm').addEventListener('submit', function(event) {
