--- a/index.html
+++ b/index.html
@@ -1,134 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Test - Registration and Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BurntPay Payment</title>
+  <style>
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .container {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    label {
+      font-weight: 600;
+      color: #555;
+    }
+
+    input, select {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 12px;
+      background-color: #6a0dad;
+      color: white;
+      font-size: 1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #580b9a;
+    }
+
+    .footer-note {
+      text-align: center;
+      margin-top: 1rem;
+      font-size: 0.85rem;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-    <h1>API Test for User Registration and Login</h1>
+  <div class="container">
+    <h2>BurntPay Checkout</h2>
 
-    <!-- Registration Form -->
-    <h2>Register</h2>
-    <form id="registerForm">
-        <label for="first_name">First Name:</label><br>
-        <input type="text" id="first_name" name="first_name" required><br><br>
+    <form id="paymentForm">
+      <div>
+        <label for="email">Email (optional):</label>
+        <input type="email" id="email" placeholder="you@example.com" />
+      </div>
 
-        <label for="last_name">Last Name:</label><br>
-        <input type="text" id="last_name" name="last_name" required><br><br>
+      <div>
+        <label for="amount">Amount (USD):</label>
+        <input type="number" id="amount" placeholder="Enter amount" required />
+      </div>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+      <div>
+        <label for="tokenType">Token Type:</label>
+        <select id="tokenType" required>
+          <option value="USDC">USDC</option>
+          <option value="XION">XION</option>
+        </select>
+      </div>
 
-        <label for="company">Company:</label><br>
-        <input type="text" id="company" name="company"><br><br>
-
-        <label for="role">Role:</label><br>
-        <select id="role" name="role">
-            <option value="Employee">Employee</option>
-            <option value="Employer">Employer</option>
-        </select><br><br>
-
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br><br>
-
-        <label for="confirm_password">Confirm Password:</label><br>
-        <input type="password" id="confirm_password" name="confirm_password" required><br><br>
-
-        <button type="submit">Register</button>
+      <button type="submit">Proceed to Pay</button>
     </form>
 
-    <h3 id="registerResponse"></h3>
+    <div class="footer-note">Powered by BurntPay (Test Environment)</div>
+  </div>
 
-    <hr>
+  <script>
+    const paymentForm = document.getElementById("paymentForm");
 
-    <!-- Login Form -->
-    <h2>Login</h2>
-    <form id="loginForm">
-        <label for="login_email">Email:</label><br>
-        <input type="email" id="login_email" name="email" required><br><br>
+    paymentForm.addEventListener("submit", async function(e) {
+      e.preventDefault();
 
-        <label for="login_password">Password:</label><br>
-        <input type="password" id="login_password" name="password" required><br><br>
+      const amount = document.getElementById("amount").value;
+      const tokenType = document.getElementById("tokenType").value;
 
-        <button type="submit">Login</button>
-    </form>
+      const response = await fetch("https://burntpay-u44m.onrender.com/payments/initialize-payment/", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "novypay-api-key": "novypay_2af8c632365448b5970fcec0059a114b" // Replace with your actual API key
+        },
+        body: JSON.stringify({
+          amount: Number(amount),
+          currency: "USD",
+          token_type: tokenType
+        })
+      });
 
-    <h3 id="loginResponse"></h3>
+      const result = await response.json();
 
-    <script>
-        // API Base URL
-        const API_BASE_URL = "https://illusion-6ga5.onrender.com/api";  // Replace with your actual API URL
-
-        // Register Form Submission
-        document.getElementById('registerForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const first_name = document.getElementById('first_name').value;
-            const last_name = document.getElementById('last_name').value;
-            const email = document.getElementById('email').value;
-            const company = document.getElementById('company').value || '';  // Optional
-            const role = document.getElementById('role').value;
-            const password = document.getElementById('password').value;
-            const confirm_password = document.getElementById('confirm_password').value;
-
-            fetch(`${API_BASE_URL}/register/`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    first_name,
-                    last_name,
-                    email,
-                    company,
-                    role,
-                    password,
-                    confirm_password
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.access_token) {
-                    document.getElementById('registerResponse').innerText = 'Registration successful! Token: ' + data.access_token;
-                } else {
-                    document.getElementById('registerResponse').innerText = 'Registration failed: ' + JSON.stringify(data);
-                }
-            })
-            .catch(error => {
-                document.getElementById('registerResponse').innerText = 'Error: ' + error.message;
-            });
-        });
-
-        // Login Form Submission
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const email = document.getElementById('login_email').value;
-            const password = document.getElementById('login_password').value;
-
-            fetch(`${API_BASE_URL}/login/`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    email,
-                    password
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.access_token) {
-                    document.getElementById('loginResponse').innerText = 'Login successful! Token: ' + data.access_token;
-                } else {
-                    document.getElementById('loginResponse').innerText = 'Login failed: ' + JSON.stringify(data);
-                }
-            })
-            .catch(error => {
-                document.getElementById('loginResponse').innerText = 'Error: ' + error.message;
-            });
-        });
-    </script>
+      if (result.status === "success") {
+        alert("Redirecting to payment...");
+        window.location.href = result.data.initiate_url;
+      } else {
+        alert("Error: " + (result.error || "Payment initialization failed."));
+      }
+    });
+  </script>
 </body>
 </html>
