--- a/index.html
+++ b/index.html
@@ -1,137 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BurntPay Payment</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .container {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    label {
-      font-weight: 600;
-      color: #555;
-    }
-
-    input, select {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-
-    button {
-      padding: 12px;
-      background-color: #6a0dad;
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #580b9a;
-    }
-
-    .footer-note {
-      text-align: center;
-      margin-top: 1rem;
-      font-size: 0.85rem;
-      color: #888;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LGA of Origin Certificate Application</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h2>BurntPay Checkout</h2>
+<body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen flex items-center justify-center">
 
-    <form id="paymentForm">
-      <div>
-        <label for="email">Email (optional):</label>
-        <input type="email" id="email" placeholder="you@example.com" />
+  <div class="bg-white shadow-2xl rounded-3xl p-10 w-full max-w-3xl border border-indigo-100">
+    <h2 class="text-3xl font-extrabold mb-8 text-indigo-700 text-center">
+      📝 LGA of Origin Certificate Application
+    </h2>
+    
+    <form id="originForm" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+      <!-- Full Name -->
+      <div class="relative md:col-span-2">
+        <input type="text" name="full_name" id="full_name"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="full_name"
+          class="absolute left-4 top-2 text-sm text-gray-500 transition-all peer-placeholder-shown:top-5 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-base peer-focus:top-2 peer-focus:text-sm peer-focus:text-indigo-600">
+          Full Name
+        </label>
       </div>
 
-      <div>
-        <label for="amount">Amount (USD):</label>
-        <input type="number" id="amount" placeholder="Enter amount" required />
+      <!-- Date of Birth -->
+      <div class="relative">
+        <input type="date" name="date_of_birth" id="date_of_birth"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="date_of_birth"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Date of Birth
+        </label>
       </div>
 
-      <div>
-        <label for="tokenType">Token Type:</label>
-        <select id="tokenType" required>
-          <option value="USDC">USDC</option>
-          <option value="XION">XION</option>
+      <!-- Gender -->
+      <div class="relative">
+        <select name="gender" id="gender"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition" required>
+          <option value="">-- Select Gender --</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
         </select>
+        <label for="gender"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Gender
+        </label>
       </div>
 
-      <button type="submit">Proceed to Pay</button>
+      <!-- Address -->
+      <div class="relative md:col-span-2">
+        <input type="text" name="address" id="address"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="address"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Address
+        </label>
+      </div>
+
+      <!-- Clan -->
+      <div class="relative">
+        <select name="clan" id="clan"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition" required>
+          <option value="">-- Select Clan --</option>
+          <option value="Agbon">Agbon Clan</option>
+          <option value="Abraka Oruarivie">Abraka Oruarivie Clan</option>
+          <option value="Abraka Umiagwa">Abraka Umiagwa Clan</option>
+        </select>
+        <label for="clan"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Clan
+        </label>
+      </div>
+
+      <!-- Sub Clan -->
+      <div class="relative">
+        <select name="sub_clan" id="sub_clan"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition" required>
+          <option value="">-- Select Sub Clan --</option>
+        </select>
+        <label for="sub_clan"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Sub Clan
+        </label>
+      </div>
+
+      <!-- LGA of Origin -->
+      <div class="relative">
+        <input type="text" name="lga_of_origin" id="lga_of_origin"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="lga_of_origin"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          LGA of Origin
+        </label>
+      </div>
+
+      <!-- State of Origin -->
+      <div class="relative">
+        <input type="text" name="state_of_origin" id="state_of_origin"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="state_of_origin"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          State of Origin
+        </label>
+      </div>
+
+      <!-- National ID -->
+      <div class="relative">
+        <input type="text" name="national_id_number" id="national_id_number"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="national_id_number"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          National ID Number
+        </label>
+      </div>
+
+      <!-- Phone -->
+      <div class="relative">
+        <input type="tel" name="phone_number" id="phone_number"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="phone_number"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Phone Number
+        </label>
+      </div>
+
+      <!-- Email -->
+      <div class="relative">
+        <input type="email" name="email" id="email"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="email"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Email
+        </label>
+      </div>
+
+      <!-- Supporting Document -->
+      <div class="relative md:col-span-2">
+        <input type="url" name="supporting_doc" id="supporting_doc"
+          class="peer w-full rounded-xl border border-gray-300 bg-gray-50 px-4 pt-5 pb-2 shadow-sm focus:border-indigo-500 focus:ring-2 focus:ring-indigo-300 focus:bg-white transition"
+          placeholder=" " required />
+        <label for="supporting_doc"
+          class="absolute left-4 top-2 text-sm text-gray-500 peer-focus:text-indigo-600">
+          Supporting Document (URL)
+        </label>
+      </div>
+
+      <!-- Submit -->
+      <div class="md:col-span-2">
+        <button type="submit"
+          class="w-full bg-indigo-600 text-white font-semibold py-3 rounded-xl shadow-lg hover:bg-indigo-700 hover:shadow-xl transition">
+          🚀 Submit Application
+        </button>
+      </div>
     </form>
 
-    <div class="footer-note">Powered by BurntPay (Test Environment)</div>
+    <!-- Response message -->
+    <div id="responseMsg" class="mt-6 text-center"></div>
   </div>
 
   <script>
-    const paymentForm = document.getElementById("paymentForm");
+    // Clan -> Sub Clan mapping
+    const SUB_CLAN_CHOICES = {
+      'Agbon': [
+        'Okpara Inland/Waterside', 'Kokori Inland', 'Eku', 'Orhoakpor', 'Otorho-Agbon (Isiokolo)',
+        'Igun', 'Ovu-Inland', 'Okurekpo', 'Oviorie-Ovu', 'Samagidi'
+      ],
+      'Abraka Oruarivie': [
+        'Uhruoka', 'Ekrejeta', 'Ajalomi', 'Urhuovie', 'Ehro', 'Ugono',
+        'Erhirhie', 'Ogbeje', 'Otorho'
+      ],
+      'Abraka Umiagwa': [
+        'Orial', 'Uruagbesa', 'Umeghe', 'Ughere', 'Oteri', 'Agbarha'
+      ]
+    };
 
-    paymentForm.addEventListener("submit", async function(e) {
+    const clanSelect = document.getElementById("clan");
+    const subClanSelect = document.getElementById("sub_clan");
+
+    clanSelect.addEventListener("change", () => {
+      const selectedClan = clanSelect.value;
+      subClanSelect.innerHTML = '<option value="">-- Select Sub Clan --</option>';
+
+      if (SUB_CLAN_CHOICES[selectedClan]) {
+        SUB_CLAN_CHOICES[selectedClan].forEach(sub => {
+          const option = document.createElement("option");
+          option.value = sub;
+          option.textContent = sub;
+          subClanSelect.appendChild(option);
+        });
+      }
+    });
+
+    // Submit handler
+    document.getElementById("originForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const amount = document.getElementById("amount").value;
-      const tokenType = document.getElementById("tokenType").value;
+      const form = e.target;
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
 
-      const response = await fetch("https://burntpay-u44m.onrender.com/payments/initialize-payment/", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "novypay-api-key": "novypay_2af8c632365448b5970fcec0059a114b" // Replace with your actual API key
-        },
-        body: JSON.stringify({
-          amount: Number(amount),
-          currency: "USD",
-          token_type: tokenType
-        })
-      });
+      try {
+        const res = await fetch("https://ethiope.onrender.com/api/lg-origin-certificates/", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        });
 
-      const result = await response.json();
+        if (!res.ok) throw new Error("Failed to submit");
 
-      if (result.status === "success") {
-        alert("Redirecting to payment...");
-        window.location.href = result.data.initiate_url;
-      } else {
-        alert("Error: " + (result.error || "Payment initialization failed."));
+        document.getElementById("responseMsg").innerHTML =
+          `<div class="p-3 rounded-lg bg-green-100 text-green-700 font-semibold">✅ Submitted Successfully!</div>`;
+      } catch (error) {
+        document.getElementById("responseMsg").innerHTML =
+          `<div class="p-3 rounded-lg bg-red-100 text-red-700 font-semibold">❌ Error submitting form.</div>`;
       }
     });
   </script>
+
 </body>
 </html>
